fixed alignment of add form elements, started splitting javascript up into separate, namespaced files

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -154,7 +154,7 @@ small {
 #add form select {
 	margin: 0;
 	padding: 3px;
-	vertical-align: top;
+	vertical-align: middle;
 	width: auto;
 }
 
